Fix grid spacing

--- a/app/assets/stylesheets/onboard.css.scss
+++ b/app/assets/stylesheets/onboard.css.scss
@@ -33,7 +33,7 @@
       .nav {
         margin-left: auto;
         margin-right: auto;
-        left: 7%;
+        left: 1%;
         li.completed a, li.active a {
           background-color: #24a7ea;
         }
