--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -38,20 +38,83 @@
 }
 
 .home_page {
-  .container{width:1200px}
-  .span12{width:1200px}
-  .span11{width:1100px}
-  .span10{width:998px}
-  .span9{width:896px}
-  .span8{width:794px}
-  .span7{width:691px}
-  .span6{width:588px}
-  .span5{width:486px}
-  .span4{width:384px}
-  .span3{width:281px}
-  .span2{width:180px}
-  .span1{width:76px}
-  .row{ margin-left: -40px; }
+  .row{ margin-left: -30px; }
+  [class*="span"] { margin-left: 30px; }
+  .container {
+    width: 1170px;
+  }
+  .span12 {
+    width: 1170px;
+  }
+  .span11 {
+    width: 1070px;
+  }
+  .span10 {
+    width: 970px;
+  }
+  .span9 {
+    width: 870px;
+  }
+  .span8 {
+    width: 770px;
+  }
+  .span7 {
+    width: 670px;
+  }
+  .span6 {
+    width: 570px;
+  }
+  .span5 {
+    width: 470px;
+  }
+  .span4 {
+    width: 370px;
+  }
+  .span3 {
+    width: 270px;
+  }
+  .span2 {
+    width: 170px;
+  }
+  .span1 {
+    width: 70px;
+  }
+  .offset12 {
+    margin-left: 1230px;
+  }
+  .offset11 {
+    margin-left: 1130px;
+  }
+  .offset10 {
+    margin-left: 1030px;
+  }
+  .offset9 {
+    margin-left: 930px;
+  }
+  .offset8 {
+    margin-left: 830px;
+  }
+  .offset7 {
+    margin-left: 730px;
+  }
+  .offset6 {
+    margin-left: 630px;
+  }
+  .offset5 {
+    margin-left: 530px;
+  }
+  .offset4 {
+    margin-left: 430px;
+  }
+  .offset3 {
+    margin-left: 330px;
+  }
+  .offset2 {
+    margin-left: 230px;
+  }
+  .offset1 {
+    margin-left: 130px;
+  }
   .arrow {
     position: absolute;
     top: 650px;
